# Chitrapat

./: .gitignore  Chitrapat [DRF].postman_collection.json  Project_Description.md  Sanmati.sql  main.py  pyproject.toml
core/: settings.py  urls.py  view.py
sangrah/: admin.py  apps.py  models.py  urls.py  views.py
sangrah/api/: function_views.py  permissions.py  plain_serializers.py  serializers.py  urls.py  views.py
sangrah/migrations/: 0001_initial.py  0002_content_platform.py  0003_review.py  0004_review_reviewer.py  0005_content_avg_rating_content_number_of_rating.py
user_app/api/: serializers.py  urls.py  views.py
